# ordit

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATA-PROTECTION.md  LICENSE  LICENSE-DATA  README.md  ROADMAP.md  RUNBOOK.md  justfile  pyproject.toml
.github/workflows/: ci.yml
contracts/: __init__.py  bdns.py  borme.py  cooperatives.py  fega.py  sat.py  sigpac.py
docs/: design-system.md  entitat_canonica.md  fils_candidats.md
docs/sources/: bdns.md  borme.md  cooperatives.md  fega.md  geografia.md  sat.md  sigpac.md
explorer/: index.html
explorer/geo/: municipis-cv.geojson
explorer/src/: app.js  base.css  components.css  explorer.css  format.js  map.js  tokens.css
ingest/: __init__.py
ingest/bdns/: __init__.py  download.py
ingest/borme/: __init__.py  download.py
ingest/cooperatives/: __init__.py  download.py
ingest/fega/: __init__.py  download.py  reconcile.py
ingest/geo/: __init__.py  build_geometry.py  build_seeds.py
ingest/sat/: __init__.py  download.py
ingest/sigpac/: __init__.py  aggregate.py  build_crosswalk.py  download.py
linkage/: __init__.py  cooperatives.py  coverage.py  sat.py
ordit_dbt/: dbt_project.yml  profiles.yml
ordit_dbt/macros/: canon_beneficiari.sql  core_beneficiari.sql  sat_core.sql  sat_namekey.sql
ordit_dbt/models/marts/: _marts.yml  mart_ajudes_pac.sql  mart_ajudes_pac_juridiques.sql  mart_concessions_bdns.sql  mart_entitat_canonica.sql  mart_pac_x_superficie_municipi.sql  mart_superficie_cultiu_municipi.sql
ordit_dbt/models/staging/: staging_bdns.sql  staging_cooperatives.sql  staging_fega.sql  staging_sat.sql  staging_sigpac.sql
ordit_dbt/seeds/: _seeds.yml  dim_municipi.csv  dim_us_sigpac.csv  xwalk_beneficiari.csv  xwalk_catastro_ine.csv  xwalk_cp_ine.csv  xwalk_locality.csv
ordit_dbt/tests/: assert_ajudes_pac_reconcilia.sql  assert_ambigu_genui.sql  assert_cif_quan_match.sql  assert_clau_registral_sat.sql  assert_concessions_bdns_reconcilia.sql  assert_entitat_canonica_coherent.sql  assert_entitat_canonica_reconcilia.sql  assert_font_enllac_coherent.sql  assert_mart_clau_unica.sql  assert_mart_nomes_juridiques.sql  assert_noms_normalitzats.sql  assert_pac_x_superficie_reconcilia.sql  assert_possible_genui.sql  assert_sigpac_clau_unica.sql  assert_superficie_agraria_reconcilia.sql
publish/: __init__.py  export.py  leak_guard.py
tests/: test_borme_ingest.py  test_clau_beneficiari.py  test_contracts.py  test_contracts_bdns.py  test_contracts_sigpac.py  test_cooperatives_ingest.py  test_coverage_spike.py  test_download.py  test_export.py  test_leak_guard.py  test_linkage_cooperatives.py  test_linkage_sat.py  test_normalitza_nom.py  test_provenance.py  test_reconciliation.py  test_sat_ingest.py  test_staging.py
tests/fixtures/: fega_sample.csv  sigpac_agg_sample.csv  sigpac_sample.csv
tests/fixtures/bdns_raw/: concesiones_cv_sample.jsonl
tests/fixtures/borme/: BORME-A-2024-99-46.xml
tests/fixtures/cooperatives/: cooperativas_sample.csv
tests/fixtures/cooperatives_raw/: cooperatives_sample.jsonl
tests/fixtures/raw/: Beneficiarios_municipio_ejercicio_financiero_2024.utf8.txt  Beneficiarios_municipio_ejercicio_financiero_2025.utf8.txt
tests/fixtures/sat/: sat_sample.csv
tests/fixtures/sat_raw/: sat_sample.jsonl
